deployer prototype.  added stuff to VFS to: 1) allow you to get all children recursively from any VirtualFile 2) Fix some bugs here and there.
git-svn-id: https://svn.jboss.org/repos/jbossas/trunk/container@44334 84be2c1e-ba19-0410-b317-a758671a6fc1